===========================================================================
2016-01-04      version 0.20.1
===========================================================================
2016-01-04:	James Osborn
	Initial support for QUDA.

2015-06-04:	James Osborn
	Fixes to staggered and DW solvers.
	Added version routines.

2015-03-21:	James Osborn
	Added OpenMP threading to parts not covered by QLA.
    	Set large QDP block size if compiled with OpenMP.
    	Added initial qll support.

===========================================================================
2014-09-08      version 0.20.0
===========================================================================
2014-08-05:	James Osborn
	Added mixed precision QOP_create_G_from_qdp.

2014-07-29:	James Osborn
	Added QOP_asqtad_create_L_from_G2 with separate fat and long gauge.

===========================================================================
2014-05-12      version 0.19.4
===========================================================================
2014-04-10:	James Osborn
	Made multigrid setup rerunnable.
	Changed verbose output in asqtad solver.

2014-04-05:	James Osborn
	Added new more stable mixed precision version of asqtad solver.
	Made clover term and wilson multigrid work for any Nc.

2014-01-30:	James Osborn
	Fixed inner rsq request calculation in asqtad solver.

2014-01-16:	James Osborn
	Added U(1) gauge heatbath from Alexei.

===========================================================================
2013-10-29      version 0.19.3
===========================================================================
2013-10-29:	James Osborn
	Removed unused su3reunit from hisq_links_p.c.
	Finished adding gauge heatbath.
	Changed gauge_*_qdp API to not use QOP_GaugeField.

===========================================================================
2013-10-26      version 0.19.2
===========================================================================
2013-10-26:	James Osborn
	Added Nc=1 library.