@@ -179,6 +179,7 @@
 #define QOP_1_wilson_force_prec_multi_qdp QOP_D1_wilson_force_prec_multi_qdp
 #define QOP_1_wilson_ifla_dslash_qdp QOP_D1_wilson_ifla_dslash_qdp
 #define QOP_1_wilson_ifla_dslash QOP_D1_wilson_ifla_dslash
+#define QOP_1_wilson_ifla_invert QOP_D1_wilson_ifla_invert
 #define QOP_1_wilson_invert_multi_qdp QOP_D1_wilson_invert_multi_qdp
 #define QOP_1_wilson_invert_multi QOP_D1_wilson_invert_multi
 #define QOP_1_wilson_invert_ne_qdp QOP_D1_wilson_invert_ne_qdp
