@@ -179,6 +179,7 @@
 #define QOP_D_wilson_force_prec_multi_qdp QOP_DN_wilson_force_prec_multi_qdp
 #define QOP_D_wilson_ifla_dslash_qdp QOP_DN_wilson_ifla_dslash_qdp
 #define QOP_D_wilson_ifla_dslash QOP_DN_wilson_ifla_dslash
+#define QOP_D_wilson_ifla_invert QOP_DN_wilson_ifla_invert
 #define QOP_D_wilson_invert_multi_qdp QOP_DN_wilson_invert_multi_qdp
 #define QOP_D_wilson_invert_multi QOP_DN_wilson_invert_multi
 #define QOP_D_wilson_invert_ne_qdp QOP_DN_wilson_invert_ne_qdp
