@@ -714,6 +714,15 @@ void QOP_PC_wilson_ifla_dslash_qdp(QOP_info_t *info,
 				   QOP_evenodd_t eo_out,
 				   QOP_evenodd_t eo_in);
 
+void QOP_PC_wilson_ifla_invert(QOP_info_t *info,
+			       QOP_PC_FermionLinksWilson *flw,
+			       QOP_invert_arg_t *inv_arg,
+			       QOP_resid_arg_t *res_arg,
+			       QOP_P_Real kappa,
+			       QOP_wilson_ifla_coeffs_t *coeffs,
+			       QOP_PC_DiracFermion *out,
+			       QOP_PC_DiracFermion *in);
+
   // MULTIGRID STUFF
 
 #ifndef _QOP_C_MG
