@@ -1,3 +1,6 @@
+2016-02-16:	James Osborn
+	Added wilson_ifla_invert pretotype.
+
 ===========================================================================
 2016-01-04      version 0.20.1
 ===========================================================================
